# dockercompose-perth-boundaries

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
builder/: Dockerfile  README.md  perth.py  pyproject.toml  setup.py
builder/labyrinth/: cli.py  database.py  parish.py  util.py
builder/labyrinth/parishes/: armadale.py  bassendean.py  bayswater.py  fremantle.py  joondalup.py  maddington.py  mountlawley.py  rockingham.py
builder/parishes/: bayswater.py  database.py  parish.py
labyrinth/: Dockerfile  pyproject.toml
labyrinth/labyrinth/: cli.py  database.py  dump.py  geometry.py  parish.py  test_parish.py
labyrinth/labyrinth/parishes/: __init__.py  armadale.py  balcatta.py  bassendean.py  bayswater.py  carine.py  eastperth.py  ellenbrook.py  fremantle.py  gosnells.py  guildford.py  heathridge.py  highgate.py  joondalup.py  kalamunda.py  kwinana.py  lakelands.py  lesmurdie.py  lockridge.py  maddington.py  maylands.py  mountlawley.py  rockingham.py  roleystone.py  wanneroo.py  warnbro.py
shapes/: README.md  load.sh
