[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "labyrinth"
version = "2.2.2"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
description="Anglican Diocese of Perth - Parish boundary generator"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Networking",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
]

[tool.poetry.scripts]
labyrinth = 'labyrinth.cli:main'

[tool.poetry.dependencies]
python = ">=3.7"
click = "^7.1.1"
requests = "^2.23.0"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"
GeoAlchemy2 = "^0.8.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
tox = "^3.14.6"
flake8 = "^3.7.9"
pytest = "^5.4.1"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
